[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/WonderHelper.gd" type="Script" id=1]
[ext_resource path="res://fonts/font_button.tres" type="DynamicFont" id=3]

[node name="Helper" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EraPanel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 0.2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="EraPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 3 )
text = "Ancient Era"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxCards" type="HBoxContainer" parent="."]
anchor_top = 0.2
anchor_right = 1.0
anchor_bottom = 0.7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Culture" type="CenterContainer" parent="HBoxCards"]
margin_right = 637.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Economy" type="CenterContainer" parent="HBoxCards"]
margin_left = 641.0
margin_right = 1278.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Military" type="CenterContainer" parent="HBoxCards"]
margin_left = 1282.0
margin_right = 1919.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Science" type="CenterContainer" parent="HBoxCards"]
margin_left = 1923.0
margin_right = 2560.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxBuild" type="HBoxContainer" parent="."]
anchor_top = 0.7
anchor_right = 1.0
anchor_bottom = 0.85
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Culture" type="Button" parent="HBoxBuild"]
margin_right = 637.0
margin_bottom = 216.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "Build"

[node name="Economy" type="Button" parent="HBoxBuild"]
margin_left = 641.0
margin_right = 1278.0
margin_bottom = 216.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "Build"

[node name="Military" type="Button" parent="HBoxBuild"]
margin_left = 1282.0
margin_right = 1919.0
margin_bottom = 216.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "Build"

[node name="Science" type="Button" parent="HBoxBuild"]
margin_left = 1923.0
margin_right = 2560.0
margin_bottom = 216.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
text = "Build"

[node name="Progress" type="Button" parent="."]
anchor_top = 0.85
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 3 )
text = "Age Wonders"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="HBoxBuild/Culture" to="." method="_on_build_pressed" binds= [ 0 ]]
[connection signal="pressed" from="HBoxBuild/Economy" to="." method="_on_build_pressed" binds= [ 1 ]]
[connection signal="pressed" from="HBoxBuild/Military" to="." method="_on_build_pressed" binds= [ 2 ]]
[connection signal="pressed" from="HBoxBuild/Science" to="." method="_on_build_pressed" binds= [ 3 ]]
[connection signal="pressed" from="Progress" to="." method="_on_Progress_pressed"]
